cheching registry for new activity warrant

--- a/FrontendService/src/main/resources/static/partials/header.html
+++ b/FrontendService/src/main/resources/static/partials/header.html
@@ -8,7 +8,7 @@
 
         <ul class="nav navbar-nav navbar-left">
         
-        	<li ng-if="display == 'RUK_KVALITET'">
+        	<li ng-if="display == 'RUK_KVALITET' || display == 'RUK_OJ' || display == 'RUK_TIMA'">
                 <a href="#/registarMera">Registar Mera</a>
             </li>
             
