checking if all activities are verified before closing registry entry

--- a/FrontendService/src/main/resources/static/partials/registar.html
+++ b/FrontendService/src/main/resources/static/partials/registar.html
@@ -2,7 +2,7 @@
 	<div class="mt-50">
 		<h1>Registar preventivnih/korektivnih mera</h1>
 		<h4>Pregled svih preventivnih/korektivnih mera koje su odobrene</h4>
-		<button class="btn btn-info" ng-click="createNew(null)" ng-if="display == RUK_KVALITET">Dodaj
+		<button class="btn btn-info" ng-click="createNew(null)" ng-if="display == 'RUK_KVALITET'">Dodaj
 			meru</button>
 		<table class="table table-bordered table-striped table-hover"
 			ng-if="data.length">
@@ -30,14 +30,14 @@
 				<td class="text-center">{{ printDate(r.produzenRok) }}</td>
 				<td class="text-center">{{ printDate(r.ostvarenRok) }}</td>
 
-				<td ng-if="display == RUK_KVALITET"><button
+				<td ng-if="display == 'RUK_KVALITET'"><button
 						class="btn btn-info" ng-click="createNew(r)">Izmeni</button></td>
 				<td ng-if="display == RUK_KVALITET"><button
 						class="btn btn-danger" ng-click="delete(r.id)">Ukloni</button></td>
-				<td ng-if="display == RUK_KVALITET"><button
+				<td ng-if="display == 'RUK_KVALITET'"><button
 						class="btn btn-warning" ng-click="postpone(r)"
 						ng-disabled="r.ostvarenRok">Produzi</button></td>
-				<td ng-if="display == RUK_KVALITET"><button
+				<td ng-if="display == 'RUK_KVALITET'"><button
 						class="btn btn-success" ng-click="close(r)"
 						ng-disabled="r.ostvarenRok">Zakljuci</button></td>
 			</tr>
