--- a/FrontendService/src/main/resources/static/partials/modals/resultsModal.html
+++ b/FrontendService/src/main/resources/static/partials/modals/resultsModal.html
@@ -22,7 +22,7 @@
 						<div class="radio">
 							<label for="r"> <input id="r" type="radio" ng-disabled="readonly"
 								ng-model="a.ocenaEfekta" value="DELIMICNI">
-								Ciljevi delimicno ostvareni
+								Ciljevi delimično ostvareni
 							</label><br />
 						</div>
 						
