--- a/FrontendService/src/main/resources/static/partials/modals/userModal.html
+++ b/FrontendService/src/main/resources/static/partials/modals/userModal.html
@@ -14,7 +14,7 @@
 				<td><input type="text" class="form-control" ng-model="prezime"><td>
 			</tr>
 			<tr>
-				<td>Korisnicko ime</td>
+				<td>Korisničko ime</td>
 				<td><input type="text" class="form-control" ng-model="uusername"><td>
 				
 			</tr>
