--- a/FrontendService/src/main/resources/static/partials/modals/verifyModal.html
+++ b/FrontendService/src/main/resources/static/partials/modals/verifyModal.html
@@ -17,7 +17,7 @@
 						<div class="radio">
 							<label for="k"> <input id="k" type="radio" ng-disabled="readonly"
 								ng-model="a.obimRealizacije" value="DELIMICNO">
-								Akrivnost delimicno realizovana
+								Akrivnost delimično realizovana
 							</label><br />
 						</div>
 						<div class="radio">
@@ -47,7 +47,7 @@
 						<div class="radio">
 							<label for="r1"> <input id="r1" type="radio" ng-disabled="readonly"
 								ng-model="a.verifikacijaEfekta" value="DELIMICNI">
-								Ciljevi delimicno ostvareni
+								Ciljevi delimično ostvareni
 							</label><br />
 						</div>
 
