--- a/FrontendService/src/main/resources/static/partials/login.html
+++ b/FrontendService/src/main/resources/static/partials/login.html
@@ -6,7 +6,7 @@
             <div class="input-group input-group-lg mt-10">
                 <span class="input-group-addon glyphicon glyphicon-user" id="username_lbl" style="top: 0;"></span>
                 <input name="username" id="username_input" type="text" class="form-control" ng-model="username"
-                       placeholder="korisnicko ime" aria-describedby="username_lbl">
+                       placeholder="korisničko ime" aria-describedby="username_lbl">
             </div>
 
             <div class="input-group input-group-lg mt-10">
