--- a/FrontendService/src/main/resources/static/partials/modals/aktivnostModal.html
+++ b/FrontendService/src/main/resources/static/partials/modals/aktivnostModal.html
@@ -25,7 +25,7 @@
 						></textarea>
 			</tr>
 			<tr>
-				<td>Ocekivani efekti</td>
+				<td>Očekivani efekti</td>
 				<td><textarea ng-model="ocekivaniEfekti" class="form-control" ng-disabled="readonly"
 						rows="4" ></textarea>
 			</tr>
@@ -33,8 +33,8 @@
 				<td>Napomena</td>
 				<td><textarea ng-model="napomena" class="form-control" ng-disabled="readonly" rows="4"></textarea>
 			</tr>
-			<td>Rukovodilac tima</td>
-			<td><input type="text" class="form-control" ng-disabled="readonly"
+			<td ng-if="readonly">Rukovodilac tima</td>
+			<td ng-if="readonly"><input type="text" class="form-control" ng-disabled="readonly"
 				ng-model="rukovodilacTima">
 			</tr>
 			<tr>
