--- a/FrontendService/src/main/resources/static/partials/registar.html
+++ b/FrontendService/src/main/resources/static/partials/registar.html
@@ -9,11 +9,11 @@
 			<tr>
 				<th class="text-center">Redni broj</th>
 				<th class="text-center">Proces/proizvod/usluga</th>
-				<th class="text-center">Neusaglasenost</th>
+				<th class="text-center">Neusaglašenost</th>
 				<th class="text-center">Mera (P/K)</th>
 				<th class="text-center">Rukovodilac tima</th>
 				<th class="text-center">Planiran</th>
-				<th class="text-center">Produzen</th>
+				<th class="text-center">Produžen</th>
 				<th class="text-center">Ostvaren</th>
 				<th ng-if="display == RUK_KVALITET"></th>
 				<th ng-if="display == RUK_KVALITET"></th>
@@ -36,10 +36,10 @@
 						class="btn btn-danger" ng-click="delete(r.id)">Ukloni</button></td>
 				<td ng-if="display == 'RUK_KVALITET'"><button
 						class="btn btn-warning" ng-click="postpone(r)"
-						ng-disabled="r.ostvarenRok">Produzi</button></td>
+						ng-disabled="r.ostvarenRok">Produži</button></td>
 				<td ng-if="display == 'RUK_KVALITET'"><button
 						class="btn btn-success" ng-click="close(r)"
-						ng-disabled="r.ostvarenRok">Zakljuci</button></td>
+						ng-disabled="r.ostvarenRok">Zaključi</button></td>
 			</tr>
 		</table>
 		<!--         <div ng-if="!data.length"> -->
