RegistarService link to CheckAcitivies updated

--- a/FrontendService/src/main/resources/static/partials/home.html
+++ b/FrontendService/src/main/resources/static/partials/home.html
@@ -1,11 +1,10 @@
 <div id="Home">
 
-<!-- 	<img src="/img/ftn-logo.png" class="text-center" height="100" width="100"/> -->
+<!-- 	<img src="/img/ftn-logo.png" height="100" width="100"/> -->
 
     <h1 class="text-center">FAKULTET TEHNIČKIH NAUKA</h1>
-    <h2 class="text-center">INTEGRISANI SISTEM MENADZMENTA</h2>
+    <h2 class="text-center"><img src="/img/ftn-logo.png" height="200" width="200"/><br/><br/>INTEGRISANI SISTEM MENADZMENTA</h2>
     <h3 class="text-center">KONTROLA KVALITETA PROIZVODA I USLUGA</h3>
-    <h3 class="text-center">IZVOĐENJE KOREKTIVNIH I PREVENTIVNIH MERA</h3>
 
     <div class="mt-50">
     	
